syntax = "proto3";

package pb;

import "order.proto";
option go_package = "github.com/techschool/simplebank/pb";

message ListOrderRequest {
    int32 page_id = 1;
    int32 page_size = 2;
}

message ListOrderResponse {
    repeated Order orders = 1;
    string next_page_token = 2;
}